frontend/test/should_pass/induced_102.grg
rule r {
	pattern {
	    x:Node;
	    y:Node;
	    z:Node;
	    induced(x,y,z);
	}
	replace {
	}
}

