frontend/test/should_fail/induced_002.grg
rule r {
	pattern {
	    x:Node;
	    induced(y);
	}
	replace {
	}
}

